bugfix(DialogTest) fix dialog tests